objects/Inventory__c.object
<CustomObject>
    <description>Marathon Ventures Inventory Records</description>
    <fields>
        <fullName>Apple_Warranty_Status__c</fullName>
        <formula>HYPERLINK(&quot;https://selfsolve.apple.com/agreementWarrantyDynamic.do&quot;, &quot;Apple Warranty&quot;)</formula>
        <label>Apple Warranty Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Backup__c</fullName>
        <label>Backup?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCleaner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCleaner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Forwarded_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call Forwarded To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inventory2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Assigned__c</fullName>
        <label>Date Acquired</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ESET_Cyber_Security_Pro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ESET Cyber Security Pro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESET_EndPoint_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ESET EndPoint Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Google_Chrome__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Google Chrome</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lexi_Loader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lexi Loader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MalwareBytes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MalwareBytes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Microsoft_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Microsoft Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Model_Year__c</fullName>
        <label>Model Year</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_Repair__c</fullName>
        <label>Needs Repair</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PDF_Pen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDF Pen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reassigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reassigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inventory1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reassigned_When__c</fullName>
        <label>Reassigned When</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Serial__c</fullName>
        <externalId>true</externalId>
        <label>Serial/Mac ID</label>
        <length>55</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
                <value>
                    <fullName>Refurbished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Asset Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apple TV</fullName>
                </value>
                <value>
                    <fullName>ATT-HomeBase (Hot Spot)</fullName>
                </value>
                <value>
                    <fullName>Cell Phone</fullName>
                </value>
                <value>
                    <fullName>Epson Printer</fullName>
                </value>
                <value>
                    <fullName>HP Printer</fullName>
                </value>
                <value>
                    <fullName>iMac</fullName>
                </value>
                <value>
                    <fullName>iPad</fullName>
                </value>
                <value>
                    <fullName>MacBook Air</fullName>
                </value>
                <value>
                    <fullName>MacBook Pro</fullName>
                </value>
                <value>
                    <fullName>Mac Mini</fullName>
                </value>
                <value>
                    <fullName>Monitor</fullName>
                </value>
                <value>
                    <fullName>Monitor Stand</fullName>
                </value>
                <value>
                    <fullName>Polycom Phone</fullName>
                </value>
                <value>
                    <fullName>Windows Laptop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VMWare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VMWare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>When_Call_Forwarded__c</fullName>
        <label>When Call Forwarded</label>
        <type>DateTime</type>
    </fields>
    <label>Inventory</label>
    <listViews>
        <fullName>Active_Phones</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>Assignee__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Serial__c</columns>
        <columns>Unit_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Polycom Phone</value>
        </filters>
        <label>Active Phones</label>
    </listViews>
    <listViews>
        <fullName>Apple_Mac_Inventory</fullName>
        <columns>NAME</columns>
        <columns>Qty__c</columns>
        <columns>Status__c</columns>
        <columns>Backup__c</columns>
        <columns>Type__c</columns>
        <columns>Model_Year__c</columns>
        <columns>Serial__c</columns>
        <columns>Date_Assigned__c</columns>
        <columns>Unit_Cost__c</columns>
        <columns>Assignee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>contains</operation>
            <value>iMac,MacBook Air,MacBook Pro,Mac Mini</value>
        </filters>
        <label>Apple (Mac) Inventory</label>
    </listViews>
    <listViews>
        <fullName>Apple_TV_Inventory</fullName>
        <columns>NAME</columns>
        <columns>Qty__c</columns>
        <columns>Type__c</columns>
        <columns>Model_Year__c</columns>
        <columns>Serial__c</columns>
        <columns>Date_Assigned__c</columns>
        <columns>Unit_Cost__c</columns>
        <columns>Assignee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>contains</operation>
            <value>Apple TV</value>
        </filters>
        <label>Apple TV Inventory</label>
    </listViews>
    <listViews>
        <fullName>Backup_Mac_Inventory</fullName>
        <columns>NAME</columns>
        <columns>Backup__c</columns>
        <columns>Qty__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Model_Year__c</columns>
        <columns>Serial__c</columns>
        <columns>Date_Assigned__c</columns>
        <columns>Unit_Cost__c</columns>
        <columns>Assignee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>contains</operation>
            <value>iMac,iPad,MacBook Air,MacBook Pro,Mac Mini</value>
        </filters>
        <filters>
            <field>Backup__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Backup Mac Inventory</label>
    </listViews>
    <listViews>
        <fullName>Directory</fullName>
        <columns>NAME</columns>
        <columns>Assignee__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Mobile__c</columns>
        <columns>Serial__c</columns>
        <columns>Model_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Polycom Phone</value>
        </filters>
        <label>Directory</label>
    </listViews>
    <listViews>
        <fullName>Phone_Inventory</fullName>
        <columns>NAME</columns>
        <columns>Assignee__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Mobile__c</columns>
        <columns>Personal_Email__c</columns>
        <columns>Type__c</columns>
        <columns>Date_Assigned__c</columns>
        <columns>Model_Year__c</columns>
        <columns>Serial__c</columns>
        <columns>Status__c</columns>
        <columns>Unit_Cost__c</columns>
        <columns>Qty__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>contains</operation>
            <value>Polycom Phone</value>
        </filters>
        <label>Phone Inventory</label>
    </listViews>
    <listViews>
        <fullName>Printer_Inventory</fullName>
        <columns>NAME</columns>
        <columns>Qty__c</columns>
        <columns>Type__c</columns>
        <columns>Model_Year__c</columns>
        <columns>Serial__c</columns>
        <columns>Date_Assigned__c</columns>
        <columns>Unit_Cost__c</columns>
        <columns>Assignee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Epson Printer,HP Printer</value>
        </filters>
        <label>Printer Inventory</label>
    </listViews>
    <listViews>
        <fullName>iPad_Inventory</fullName>
        <columns>NAME</columns>
        <columns>Qty__c</columns>
        <columns>Type__c</columns>
        <columns>Model_Year__c</columns>
        <columns>Serial__c</columns>
        <columns>Date_Assigned__c</columns>
        <columns>Unit_Cost__c</columns>
        <columns>Assignee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>contains</operation>
            <value>iPad</value>
        </filters>
        <label>iPad Inventory</label>
    </listViews>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Asset_Description_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Type__c , &quot;&quot;)</errorConditionFormula>
        <errorMessage>Please update Asset Description &quot;TYPE&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Call_Forwarded</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Call_Forwarded__c = TRUE,ISBLANK(When_Call_Forwarded__c))</errorConditionFormula>
        <errorMessage>Please make sure to update when calls were forwarded</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requires_Phone_Number</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Type__c , &quot;Polycom Phone&quot;), ISBLANK(Phone_Number__c))</errorConditionFormula>
        <errorDisplayField>Phone_Number__c</errorDisplayField>
        <errorMessage>Requires Phone Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requires_Serial</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR(ISPICKVAL(Type__c , &quot;iMac&quot;),ISPICKVAL(Type__c , &quot;iPad&quot;),ISPICKVAL(Type__c , &quot;Macbook&quot;),ISPICKVAL(Type__c , &quot;Macbook Air&quot;),ISPICKVAL(Type__c , &quot;Macbook Pro&quot;),ISPICKVAL(Type__c , &quot;Mac Mini&quot;),ISPICKVAL(Type__c , &quot;Polycom Phone&quot;)), ISBLANK(Serial__c))</errorConditionFormula>
        <errorDisplayField>Serial__c</errorDisplayField>
        <errorMessage>Requires Mac Serial or Phone ID</errorMessage>
    </validationRules>
</CustomObject>